# minifiletree

./: .gitignore  Cargo.toml  README.md
examples/: example.rs
src/: data.rs  error.rs  lib.rs  reader.rs  util.rs  writer.rs
