[package]
name = "minifiletree"
version = "0.1.0"
authors = ["N/A <N/A>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Just for testing of correct endianness handling of serialized data.
# LE used by default for writing and reading. Obviously data serialized with BE will be incompatible with LE readers.
big_endian = []

[dependencies]
static_assertions = "1.1.*"
bitflags = "1.3.*"
ministr = { path = "../ministr" }
minifilepath = { path = "../minifilepath" }
minimultimap = { path = "../minimultimap" }
miniunchecked = { path = "../miniunchecked" }

[dev-dependencies]
seahash = { version = "4.1" }
minifilepath_macro = { path = "../minifilepath_macro" }
ministr_macro = { path = "../ministr_macro" }